# archivos-proyecto-

./: README.md  cola.h
Core/: CatalogoPreferencias.h  Historial.h  Preferencias.h  Productos.h  Usuario.h
DataStructures/: ArbolBinarioBusqueda.cpp  ArbolBinarioBusqueda.h  ColaHistorial.cpp  ColaHistorial.h  ListaEnlazadaPreferencias.cpp  ListaEnlazadaPreferencias.h  ListaEnlazadaProductos.cpp  ListaEnlazadaProductos.h  cola.cpp  cola.h
Logic/: UsuarioManager.cpp  UsuarioManager.h
Logic/BusquedaManager/: BusquedaManager.cpp  BusquedaManager.h
Logic/HistorialManager/: HistorialManager.cpp  HistorialManager.h
Logic/PreferenciasManager/: PreferenciasManager.cpp  PreferenciasManager.h
Logic/ProductoManager/: ProductoManager.cpp  ProductoManager.h  cmakelists.txt
Logic/Usuario_Manager/: Usuario_Manager.cpp  Usuario_Manager.h
interface/: UsuarioBackend.h
src/: main.cpp
test/: CMakeLists.txt  test.cpp
